...
  };

  return (
    <View style={styles.root}>
      <View style={styles.header}>
        <TouchableOpacity
          testID="e2e-direct-back"
          onPress={onBack}
          style={styles.backBtn}
        >
          <Text style={styles.backTxt}>{'< Back'}</Text>
        </TouchableOpacity>
        <Text style={styles.title}>Direct NitroSound Usage</Text>
        {/* eslint-disable-next-line react-native/no-inline-styles */}
        <View style={{ width: 60 }} />
      </View>
      <ScrollView contentContainerStyle={styles.container}>
        <Text style={styles.sectionTitle}>Recorder</Text>
        <View style={styles.row}>
          <TouchableOpacity
            testID="e2e-direct-record-start"
            style={[
              styles.btn,
              (isRecordLoading || isRecording) && styles.btnDisabled,
            ]}
            onPress={onStartRecord}
            disabled={isRecordLoading || isRecording}
...
              </View>
            ) : (
              <Text style={styles.btnTxt}>Start</Text>
            )}
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-record-pause"
            style={[
              styles.btn,
              (isRecordLoading || !isRecording) && styles.btnDisabled,
            ]}
            onPress={() => {
              soundRef.current.pauseRecorder().catch(() => {});
            }}
            disabled={isRecordLoading || !isRecording}
          >
            <Text style={styles.btnTxt}>Pause</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-record-resume"
            style={[
              styles.btn,
              (isRecordLoading || !isRecording) && styles.btnDisabled,
            ]}
            onPress={() => {
              soundRef.current.resumeRecorder().catch(() => {});
            }}
            disabled={isRecordLoading || !isRecording}
          >
            <Text style={styles.btnTxt}>Resume</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-record-stop"
            style={[
              styles.btn,
              (!isRecording || isStopLoading) && styles.btnDisabled,
            ]}
            onPress={onStopRecord}
            disabled={!isRecording || isStopLoading}
...
              ]}
            />
          </View>
        )}
        <View style={styles.row}>
          <TouchableOpacity
            testID="e2e-direct-player-start"
            style={[
              styles.btn,
              (isPlayLoading || isPlaying) && styles.btnDisabled,
            ]}
            onPress={onStartPlay}
            disabled={isPlayLoading || isPlaying}
...
              </View>
            ) : (
              <Text style={styles.btnTxt}>Play</Text>
            )}
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-player-pause"
            style={[
              styles.btn,
              (isPlayLoading || !isPlaying) && styles.btnDisabled,
            ]}
            onPress={async () => {
              try {
...
            }}
            disabled={isPlayLoading || !isPlaying}
          >
            <Text style={styles.btnTxt}>Pause</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-player-resume"
            style={[
              styles.btn,
              (isPlayLoading || isPlaying) && styles.btnDisabled,
            ]}
            onPress={async () => {
              try {
...
            }}
            disabled={isPlayLoading || isPlaying}
          >
            <Text style={styles.btnTxt}>Resume</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-direct-player-stop"
            style={[
              styles.btn,
              (isPlayLoading || (!isPlaying && playbackPosition === 0)) &&
                styles.btnDisabled,
            ]}
            onPress={onStopPlay}
...
